<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="plv_media_player_ui_component_speed_hint_text">倍速</string>
    <string name="plv_media_player_ui_component_speed_hint_text_portrait">倍速：</string>
    <string name="plv_media_player_ui_component_bit_rate_hint_text_portrait">清晰度：</string>
    <string name="plv_media_player_ui_component_long_press_speed_control_hint_text">快进中</string>
    <string name="plv_media_player_ui_component_full_screen_hint_text">全屏观看</string>
    <string name="plv_media_player_ui_component_audio_mode_hint_desc_text">在锁屏和切到后台时也能播放音频</string>
    <string name="plv_media_player_ui_component_audio_mode_hint_text">音频模式</string>
    <string name="plv_media_player_ui_component_subtitle_setting_text">字幕设置</string>
    <string name="plv_media_player_ui_component_subtitle_setting_show_switch_label">显示字幕</string>
    <string name="plv_media_player_ui_component_subtitle_setting_double_subtitle_prefix">显示双语：</string>
    <string name="plv_media_player_ui_component_download_text">下载</string>
    <string name="plv_media_player_ui_component_download_text_paused">暂停中</string>
    <string name="plv_media_player_ui_component_download_text_downloading">下载中</string>
    <string name="plv_media_player_ui_component_download_text_waiting">等待中</string>
    <string name="plv_media_player_ui_component_download_text_completed">已下载</string>
    <string name="plv_media_player_ui_component_download_text_failed">下载失败</string>
    <string name="plv_media_player_ui_component_float_window_hint_text">小窗播放</string>
    <string name="plv_media_player_ui_component_switch_video_hint_text">切回视频</string>
    <string name="plv_media_player_ui_component_error_hint_text">视频加载失败，请检查网络设置</string>
    <string name="plv_media_player_ui_component_error_hint_restart_text">点击重试</string>
    <string name="plv_media_player_ui_component_complete_hint_restart_text">重播</string>
    <string name="plv_media_player_ui_component_network_poor_hint_text">当前网络较差，可尝试</string>
    <string name="plv_media_player_ui_component_network_poor_switch_bitrate_action_text">切换到{}</string>
    <string name="plv_media_player_ui_component_auxiliary_time_left_text">广告也精彩：{}秒</string>
    <string name="plv_media_player_ui_component_buffering_speed_hint_text">正在加载中 请稍等</string>
    <string name="plv_media_player_ui_component_switch_bit_rate_start_text_pre">正在为您切换到</string>
    <string name="plv_media_player_ui_component_switch_bit_rate_start_text_post">清晰度，请耐心等待~</string>
    <string name="plv_media_player_ui_component_switch_bit_rate_finish_text_pre">您已成功切换到</string>
    <string name="plv_media_player_ui_component_switch_bit_rate_finish_text_post">清晰度</string>
    <string name="plv_media_player_ui_component_auto_continue_hint_pre">您上次观看至</string>
    <string name="plv_media_player_ui_component_auto_continue_hint_post">，已为您自动续播</string>
    <string name="plv_media_player_ui_component_auto_continue_hint_feed_pre">已从</string>
    <string name="plv_media_player_ui_component_auto_continue_hint_feed_post">续播</string>
    <string name="plv_media_player_ui_component_screenshot_save_success">视频截图成功保存至：%s</string>
    <string name="plv_media_player_ui_component_screenshot_save_failed">视频截图保存失败</string>
    <string name="plv_media_player_ui_component_knowledge_hint_text">知识点</string>
    <string name="plv_media_player_danmu_content_hint">说点什么...</string>
    <string name="plv_media_player_danmu_send">发送</string>
    <string name="plv_media_player_danmu_color">弹幕颜色</string>
    <string name="plv_media_player_danmu_mode">弹幕类型</string>
    <string name="plv_media_player_danmu_mode_roll">滚动</string>
    <string name="plv_media_player_danmu_mode_top">顶部</string>
    <string name="plv_media_player_danmu_mode_bottom">底部</string>
    <string name="plv_media_player_danmu_size">字体大小</string>
    <string name="plv_media_player_reset_translation">还原屏幕</string>
</resources>